--- a/templates/index.html
+++ b/templates/index.html
@@ -18,7 +18,7 @@
             <form
                 hx-post="/upload"
                 hx-target="#materials-panel"
-                hx-swap="innerHTML"
+                hx-swap="outerHTML"
                 hx-indicator="#upload-loading"
                 enctype="multipart/form-data">
 
